# surreal

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  homebrew.yml  release.yml
examples/: binary.dream  binary.tb  binary_example.dream  display_example.dream  early_return.dream  enum_example.dream  enumerable_test.dream  error_demo.dream  ffi.dream  ffi_result_example.dream  file_example.dream  hello.tb  impl_test.dream  map_example.dream  math.tb  multiclause.dream  option.dream  recv_simple.tb  result.dream  spawn_test.dream  spawn_test.tb  stdlib_demo.dream  stdlib_test.dream  trait_type_params.dream  traits.dream
examples/application_example/: dream.toml
examples/application_example/src/: main.dream
examples/basics/: impl.dream  stdlib.dream
examples/collections/: enumerable.dream  enumerable.surreal  hashmap.surreal  iterator.dream
examples/concurrency/: genserver.dream  process.dream  supervisor.dream
examples/ffi/: ffi.dream
examples/files/: file.dream
examples/http_api/: dream.toml
examples/http_api/src/: app.dream  lib.dream  main.dream  tests.dream
examples/macros/: debug_derive.dream
examples/serde/: dream.toml
examples/serde/src/: lib.dream
examples/strings/: method_chain.dream
examples/types/: struct_variants.dream
examples/use_test/: lib.dream  math.tb
homebrew/: README.md
homebrew/Formula/: surreal.rb
native/surreal_nif/: surreal_nif.erl
src/: bindgen.rs  config.rs  deps.rs  instruction.rs  lib.rs  main.rs  message.rs  module.rs  pid.rs  process.rs  repl.rs  scheduler.rs  value.rs  wasm.rs
src/compiler/: ast.rs  ast_serde.rs  cfg.rs  codegen.rs  core_erlang.rs  derive.rs  error.rs  lexer.rs  loader.rs  macro_expander.rs  mod.rs  parser.rs  prelude.rs  quote_expand.rs  token.rs  typeck.rs
src/lsp/: analysis.rs  backend.rs  lookup.rs  mod.rs  position.rs
stdlib/: application.dream  application.surreal  convert.dream  convert.surreal  display.dream  display.surreal  enumerable.dream  enumerable.surreal  file.dream  file.surreal  genserver.dream  genserver.surreal  io.dream  io.surreal  iterator.dream  iterator.surreal  keyword.surreal  list.dream  list.surreal  logger.dream  logger.surreal  map.dream  map.surreal  option.dream  option.surreal  proc_macro.surreal  process.dream  process.surreal  result.dream  result.surreal  string.dream  string.surreal  supervisor.dream  supervisor.surreal  syn.dream  system.dream  system.surreal  term.surreal  timer.dream  timer.surreal
stubs/: erlang.dreamt  file.dreamt  io.dreamt  lists.dreamt  maps.dreamt
tests/: compile_snapshots.rs
tests/fixtures/: test_macro.erl
tests/snapshots/: compile_snapshots__valid_ffi_result_transform.snap
tree-sitter-dream/: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-dream/queries/: folds.scm  highlights.scm  indents.scm  locals.scm  textobjects.scm
tree-sitter-dream/src/: grammar.json  node-types.json  parser.c
(+33 files in other folders)
