[package]
name = "dream"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logos = "0.14"
wasm-bindgen = "0.2"
num-bigint = "0.4"
num-traits = "0.2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
