[package]
name = "dream"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logos = "0.14"
wasm-bindgen = "0.2"
num-bigint = "0.4"
num-traits = "0.2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
rustyline = "14"
hexpm = "5.1"
flate2 = "1"
tar = "0.4"
reqwest = "0.12"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
tempfile = "3"
insta = { version = "1.41", features = ["glob"] }

[profile.release]
opt-level = "s"
lto = true
